<resources>
    <string name="app_name">ReciclaMais</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="numero">Numero</string>
    <string name="rua">Rua</string>
    <string name="cep">CEP</string>
    <string name="cpf">CPF</string>
    <string name="senha">Senha</string>
    <string name="email">E-mail</string>
    <string name="nome">Nome</string>
    <string name="coleta_do_dia">Você participou de 0 coletas</string>
    <string name="hist_rico_recente">Histórico recente</string>
    <string name="trocar_pontos">Trocar pontos</string>
    <string name="title_activity_teste_navigation">TesteNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="logotipo_reciclamais">Logotipo ReciclaMais</string>
    <string name="field_required">Este campo é obrigatório</string>
    <string name="editar"><u>Editar usuário</u></string>
    <string name="nao_possui_conta_cadastre_aqui">Não possui uma conta? <b>Cadastre-se aqui.</b></string>
    <string name="entrar">Entrar</string>
    <string name="hint_cpf">123.456.789-10</string>
    <string name="hint_senha">•••••</string>
    <string name="bairro">Bairro</string>
    <string name="buscar">Buscar</string>
    <string name="alterar_para_funcionario">Alterar para funcionario</string>
    <string name="excluir_conta">Excluir conta</string>
    <string name="salvar_alteracoes">Salvar alterações</string>
    <string name="escanear">Escanear</string>
    <string name="enviar_registros">Enviar registros</string>
</resources>
